# chess

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: electron.vite.config.ts  index.html  package.json  tsconfig.json
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/electron/services/: app-store.ts  engine-manager.ts  engine-session.ts  managed-installer.ts  tablebases.ts  uci.ts  vision-client.ts
apps/desktop/shared/: contracts.ts
apps/desktop/src/: App.module.css  App.tsx  index.css  vite-env.d.ts
apps/desktop/src/components/: BoardImportModal.module.css  BoardImportModal.tsx  BoardPanel.module.css  BoardPanel.tsx  CameraCaptureModal.module.css  CameraCaptureModal.tsx  EnginePanel.module.css  EnginePanel.tsx  NotationPanel.module.css  NotationPanel.tsx
apps/desktop/src/lib/: chess-workspace.test.ts  chess-workspace.ts
apps/desktop/src/store/: useDesktopStore.ts
assets/engines/: README.md
assets/icons/: README.md
services/vision/: pyproject.toml
services/vision/jacobstarheim_chess_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/vision/scripts/: bootstrap_venv.sh  run_tests.sh
services/vision/tests/: test_protocol.py  test_tablebase_helpers.py
services/vision/vision_worker/: __init__.py  board_import.py  protocol.py  tablebase.py  worker.py
